--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.7.0"
 description = "This paper proposes seqKAN, a KAN architecture for sequence processing."
 authors = ["Tatiana Boura <tat.boura@gmail.com>"]
 readme = "README.md"
+packages = [ {include = "src"} ]
 
 [tool.poetry.dependencies]
 python = "^3.10"
