--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel poetry
+
+      - name: Check Poetry Installation
+        run: poetry --version
+
+      - name: Install dependencies
+        run: poetry install
       - name: Build package
         run: |
-          poetry build
+          python3 -m poetry build
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
