Automatically Bump Patch Version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,9 +29,16 @@ jobs:
 
       - name: Automatically Bump Patch Version
         run: |
-          poetry version patch 
+          poetry version patch  # Increments the patch version
           NEW_VERSION=$(poetry version --short)
           echo "New version: $NEW_VERSION"
+      
+          # Commit & push the updated version
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add pyproject.toml
+          git commit -m "Bump version to $NEW_VERSION [skip ci]"
+          git push origin main
         
       - name: Build package
         run: |
