--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,10 @@ jobs:
           # Configure Git
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
+          
+          # Remove the default origin and re-add it using the PAT
+          git remote remove origin
+          git remote add origin https://x-access-token:${ORG_GH_PAT}@github.com/data-eng/seqKAN.git
       
           # Fetch all branches and switch to 'master'
           git fetch --prune
