--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "seqkan"
-version = "0.7.2"
+version = "0.7.3"
 description = "This paper proposes seqKAN, a KAN architecture for sequence processing."
 authors = ["Tatiana Boura <tat.boura@gmail.com>"]
 readme = "README.md"
-packages = [ {include = "src"} ]
+packages = [ {include = "seqkan"} ]
 
 [tool.poetry.dependencies]
 python = "^3.10"
