Change torch dep back to vanilla

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "seqkan"
-version = "0.8.0"
+version = "0.8.1"
 description = "seqKAN, a KAN architecture for sequence processing."
 authors = [ "Tatiana Boura <tatianabou@iit.demokritos.gr>",
 	    "Stasinos Konstantopoulos <konstant@iit.demokritos.gr>" ]
@@ -15,7 +15,8 @@ matplotlib = "^3.10.0"
 tqdm = "^4.67.1"
 sympy = "^1.13.1"
 scikit-learn = "^1.7.1"
-torch = {version = "^2.6.0+cpu", source = "pytorch_cpu"}
+torch = "^2.6.0"
+#torch = {version = "^2.6.0+cpu", source = "pytorch_cpu"}
 
 [[tool.poetry.source]]
 name = "pytorch_cpu"
