--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ matplotlib = "^3.10.0"
 tqdm = "^4.67.1"
 sympy = "^1.13.1"
 scikit-learn = "^1.7.1"
-torch = "^2.6.0"
-#torch = {version = "^2.6.0+cpu", source = "pytorch_cpu"}
+#torch = "^2.6.0"
+torch = {version = "^2.6.0+cpu", source = "pytorch_cpu"}
 
 [[tool.poetry.source]]
 name = "pytorch_cpu"
